<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    android:rotation="360"
    android:rotationX="360"
    android:rotationY="360"
    tools:context=".ui.addtrans.AddtransFragment">

    <TextView
        android:id="@+id/text_addtrans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="330dp"
        android:layout_height="235dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_addtrans"
        tools:src="@drawable/profile_82effdfa" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone_number"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="427dp"
        app:layout_constraintTop_toBottomOf="@id/EmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/TextDate"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Phone" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="651dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/TextDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="651dp"
        app:layout_constraintStart_toEndOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextDate"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>